Update .gitignore and add requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-screenshots/
 *.mp4
 *.webm
 .vscode/
-
-# R
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-
-# Python
+.idea/
 venv/
 __pycache__/
 
